# sqlr

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  justfile  test_input.json
.github/workflows/: ci.yml  verify.yml
example/: Cargo.toml  queries.sql  schema.sql  sqlc.yaml
example/src/: main.rs
src/: generator.rs  lib.rs  main.rs  type_mapping.rs  types.rs
